# ros2_hoop_detector

./: .gitignore  README.md  hik_camera.cpp  hoop_detector.cpp  hoop_detector.hpp  main.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hik_camera/share/ament_index/resource_index/parent_prefix_path/: hik_camera
install/hik_camera/share/hik_camera/: local_setup.sh  package.sh
install/hik_camera/share/hik_camera/cmake/: hik_cameraConfig.cmake
install/hoop_detector/include/hoop_detector/: hoop_detector.hpp
install/hoop_detector/share/ament_index/resource_index/package_run_dependencies/: hoop_detector
install/hoop_detector/share/ament_index/resource_index/parent_prefix_path/: hoop_detector
install/hoop_detector/share/ament_index/resource_index/rclcpp_components/: hoop_detector
install/hoop_detector/share/hoop_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hoop_detector/share/hoop_detector/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  hoop_detectorConfig-version.cmake  hoop_detectorConfig.cmake
install/hoop_detector/share/hoop_detector/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
log/: latest_build
src/hik_camera/: CMakeLists.txt
src/hik_camera/include/hik_camera/: hik_camera.hpp  hik_camera_node.hpp
src/hik_camera/launch/: hik_camera.launch.py
src/hik_camera/src/: hik_camera.cpp  hik_camera_node.cpp  main.cpp
src/hoop_detector/: CMakeLists.txt  package.xml
src/hoop_detector/include/hoop_detector/: hoop_detector.hpp
src/hoop_detector/launch/: hoop_system.launch.py
src/hoop_detector/src/: hoop_detector.cpp  hoop_detector_node.cpp
